# rust_fit_file

./: Cargo.toml  README.md
src/: fit.rs  fit_file.rs  lib.rs
tests/: 20200529_short_ocean_swim.fit  20210218_zwift.fit  20210507_run_coros_pace_2.fit  20210610_track_garmin_fenix_6.fit  20210709_pool_swim.fit  Messages-Table.csv  Types-Table.csv  trainingpeaks_export.fit
