[package]
name = "fit_file"
description = "Reads FIT (Flexible and Interoperable Data Transfer) files"
license = "MIT"
readme = "README.md" 
keywords = ["fit"] 
version = "0.3.3"
authors = ["Mike Simms <msimms01@gmail.com>"]
repository = "https://github.com/msimms/rust_fit_file"
edition = "2018"
exclude = ["tests/*.csv", "tests/*.fit"]

[dependencies]
csv = "1"
